syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting {
    string firts_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetReponse{
    string result  = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesReponse{
    string result  = 1;
}
message LongGreetRequest {
    Greeting greeting = 1;
}
message LongGreetResponse {
    string result =1;
}

service GreetService{
    //unary 
    rpc Greet(GreetRequest) returns (GreetReponse) {};
    //Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesReponse) {};
    //Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}



